--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -15,85 +15,62 @@
 
 == Transliteration and Translation
 
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[literal,subs="verbatim,quotes"]
 ....
 NC 5702               
 
 [rok]
 
            E[ingegangen]. in d. K. 21 Dec 1841
-Der Wiederankauf dieses Grundstückes
-für den früheren Verkaufs-Preis
-ist hiernach gewiß nicht vortheilhaft.
-Es ist aber zu erwägen, daß der Vater
-des Suppl. in guten Vermögens-Umständen
-dieses Grundstück zu dem an-
-gegebenen hohen Kaufpreise von der
-Kammer gekauft hat, und dem jetzigen
-Colon — und eine verlorene Pacht — durch
-unglückliche Umstände der
+Der Wiederankauf dieses Grundstückes für den früheren
+Verkaufs-Preis ist hiernach gewiß nicht vortheilhaft.  Es ist
+aber zu erwägen, daß der Vater des Suppl. in guten
+Vermögens-Umständen dieses Grundstück zu dem an- gegebenen hohen
+Kaufpreise von der Kammer gekauft hat, und dem jetzigen Colon —
+und eine verlorene Pacht — durch unglückliche Umstände der
 Concurs bevorsteht (wenn ihm dadurch nicht geholfen wird).
-Allerdings hat die Kammer keine Verpflichtung,
-das Grundstück wieder zurückzunehmen; allein
-(obgleich sie es zu dem angefallenen Preise verkauft hat,)
-unter diesen Umständen scheint es mir
-doch billig, wenn die Kammer es
-etwa — nicht räthlicher — findet, dem Krückeberg
-vorerst die erbetenen 200 Rthl
-zu leihen?  Bbg 19 Dec 1841.
+Allerdings hat die Kammer keine Verpflichtung, das Grundstück
+wieder zurückzunehmen; allein (obgleich sie es zu dem
+angefallenen Preise verkauft hat,) unter diesen Umständen scheint
+es mir doch billig, wenn die Kammer es etwa — nicht räthlicher —
+findet, dem Krückeberg vorerst die erbetenen 200 Rthl zu leihen?
+Bbg 19 Dec 1841.
 
 Georg Wilhelm
 
 P.V.
-Soll dem p Krückeberg gründlich ge-
-helfen werden, so müsste diess
-wohl am sichersten dadurch geschehe,
-wenn demselben das fragliche
-Land zu dem Preise, des Suppli-
-canten Vater der Kammer da-
-für bezahlt, wieder abgenom-
-men wird, wodurch er ohne ein
-neues Anlehn nöthig zu haben,
-gleichzeitig ein schlechtes Grund-
-stück wieder los wird, und eine
-so bedeutende Summe Geldes zu
-Händen bekommt, daß er sich
-von seinen meisten Schulden wird
+Soll dem p Krückeberg gründlich ge- helfen werden, so müsste
+diess wohl am sichersten dadurch geschehe, wenn demselben das
+fragliche Land zu dem Preise, des Suppli- canten Vater der Kammer
+dafür bezahlt, wieder abgenommen wird, wodurch er ohne ein
+neues Anlehn nöthig zu haben, gleichzeitig ein schlechtes Grund-
+stück wieder los wird, und eine so bedeutende Summe Geldes zu
+Händen bekommt, daß er sich von seinen meisten Schulden wird
 befreien können.
 
-Leichteren Kaufes würde übri-
-gens die Kammer davon kommen,
-wenn die 200 rt Darlehen
-bewilligt werden. Der Zweck
-dem Krückeberg gründlich zu
-helfen, scheint mir indes da-
-durch nicht erreicht zu werden.
-Im Interesse des Krücke-
-berg wurde ich daher für den
-Krückeberg Wiederankauf
-des Landes mich entscheiden,
-welches ohnedem durch den von
-O. f. Kreuzinger vorgeschlagen
-Abzugsgraben wahrscheinlich
-bedeutend verbessert werden
-kann.  Bbg 23. Dec. 41.
+Leichteren Kaufes würde übrigens die Kammer davon kommen, wenn
+die 200 rt Darlehen bewilligt werden. Der Zweck dem Krückeberg
+gründlich zu helfen, scheint mir indes dadurch nicht erreicht
+zu werden.  Im Interesse des Krücke- berg wurde ich daher für den
+Krückeberg Wiederankauf des Landes mich entscheiden, welches
+ohnedem durch den von O. f. Kreuzinger vorgeschlagen Abzugsgraben
+wahrscheinlich bedeutend verbessert werden kann.
+Bbg 23. Dec. 41.
 
 RC     Rick[e]
 
-Die Kammer verstelle die
-weitere Entscheidung unter-
-thänigste zu Höchsten Ermessen
-seÿ indeß der Meinung, daß
-es rathsamer seÿn dürfte, lie-
-ber das Darlehn von 200 rp
-zu bewilligen, indem dabei
-selbst wenn es unsicher steht
-der Schaden für die Kammer-
-Kasse doch immer geringer
-seÿn werde, als wenn das
-fragliche wenig nutzbares
-Land, das Kreutzinger zu 400 rt
-taxirt für mehr als 800 rtn
-wiedergekauft wurde.
+Die Kammer verstelle die weitere Entscheidung unterthänigste zu
+Höchsten Ermessen seÿ indeß der Meinung, daß es rathsamer seÿn
+dürfte, lieber das Darlehn von 200 rp zu bewilligen, indem dabei
+selbst wenn es unsicher steht der Schaden für die Kammer-Kasse
+doch immer geringer seÿn werde, als wenn das fragliche wenig
+nutzbares Land, das Kreutzinger zu 400 rt taxirt für mehr als 800
+rtn wiedergekauft wurde.
 Bbg. 23. Decbr.
 
 Rick[e]
@@ -101,11 +78,10 @@ Rick[e]
 
 .Vertical Text
 ....
-Ich bewilligt nach dem Antrage der Kammer
-des Dorlichen von 200 rtl dem Krückeberg,
-indem es auch künftig immer noch Zeit seyn würde,
-des Land anzunehmen und die Schuld darauf zu
-liquidiren. Bd 23 Dec.
+Ich bewilligt nach dem Antrage der Kammer des Dorlichen von 200
+rtl dem Krückeberg, indem es auch künftig immer noch Zeit seyn
+würde, des Land anzunehmen und die Schuld darauf zu liquidiren.
+Bb 23 Dec.
 Georg Wilhelm
 ....
 
@@ -114,6 +90,7 @@ Georg Wilhelm
 (Die Taxe wird indes wohl etwas niedrig seÿn.)
 ....
 
+|
 [verse]
 ____
 NC 5702               
@@ -166,7 +143,6 @@ Rick[e]
 ____
 
 
-.Vertical Text
 [verse]
 ____
 I approve, in accordance with the chamber’s petition, the loan of
@@ -176,8 +152,8 @@ Bbg., 23 Dec.
 Georg Wilhelm
 ____
 
-.Left Margin Text in Parentheses
-....
+[verse]
+____
 (However, the appraisal/valuation will likely be somewhat low.)
-....
-
+____
+|===
