--- a/todo.adoc
+++ b/todo.adoc
@@ -2,10 +2,15 @@
 
 == 689
 
-=== Document Index
+=== Document Index, Definitions, Timelines and Events
 
-* Create xrefs from document index to the actual documents and supplemental documents mentioned. 
-* Check the "NC" numbers for each document in the document index.
+* Create xrefs that link the document index entries to the actual documents (and supplemental documents) and an
+anchor in the doducment 
+* Check the "NC" numbers for each document in the document index and create a table that lists these
+numbers along with the subject and the documents they refer to.
+* Creat a glossary with definitions of key terms and examples that illustrate and show the meaning.
+* Within the chronological story of the Rentcammer documents, related reports and its decision, create a chronology
+of facts and events in Johann Heinrich Krückeberg's financial trial. 
 
 === Consoliate 
 
