--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -232,12 +232,12 @@ Epp Lot[??]         Abschrift eines obigen Gegenstand
 ____
 *Main opinion (Renkamnmer assessor Reck):*
 So sad as Krückeberg’s situation may be, I still do not see how
-he can be helped.  To approve a loan where the security is so
+he can be helped. To approve a loan where the security is so
 insufficient is not possible. Just as unwelcome does it seem to
 me that the land in the Söhre which he purchased be bought back.
 If Krückeberg, on account of his debts, is at all able to dispose
-of it, let him seek to sell this land elsewhere.  In my view,
-with the adverse decision it should simply remain as it is.
+of it, let him seek to sell this land elsewhere. In my view, with
+the adverse decision it should simply remain as it is.
 Bückeburg, 25 Nov. 1841.
 
 Reck
