--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -244,7 +244,8 @@ Kammerkasse geliehene +
 |21
 
 |4.
-|Chamber resolution to Chief Forester Creuzinger; likewise, a petition “for …” (subject continues in file).
+|Chamber resolution to Chief Forester Creuzinger
+|Likewise: petition “for …” (subject continues in the file)
 |Bückeburg
 |1841
 |November
