--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -147,7 +147,7 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
 
 
 
-                               vorl.[?]
+                               vert.
 ....
 
 |
