--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -256,7 +256,7 @@ C. 1/                              N.P. 1274
  Fr.                 obigen Gegenstand betreffen-
  R.                  de Bericht vom 7. d. M.
  Expedirt            beauftragt, wie angetra-
- Holste              gen den Krückeburg zu 
+ Holste              gen den Krückeberg zu 
  17/11.              bescheiden.
 
                       Bbg. 14. Oct. 1841.
