--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -249,7 +249,7 @@ C. 1/                              N.P. 1274
 
                              Gesuch des Colons Krücke-
      Copt                    berg N. 10 in Beren-
- aus Amt Buckeburg.          busch, um Anlehns-
+ aus Amt Bückeburg.          busch, um Anlehns-
                              consens betr:
 
                      Das Amt wird auf den
