--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -1,3 +1,4 @@
+[[doc-index-5-1]]
 = Documendt 5: Evaluation of the Krückeberg Parcel (Berenbusch): Flooding, Use, and Value for Potential Sale in Debt Proceedings (10 Dec 1841)
 :page-role: wide
 
