--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -86,9 +86,7 @@ Gesuch um
 
 [[idx-5-1]]
 |5.
-|Bericht des Of. Creuzinger +
-Anb. Situations-Riß der +
-Söhren-Weide
+|Bericht des Of. Creuzinger Anb. Situations-Riß der Söhren-Weide
 .4+|Verkauf seiner +
 Ländereien auf der +
 Söhren-Weide +
