--- a/todo.adoc
+++ b/todo.adoc
@@ -2,6 +2,7 @@
 
 == Document Index, Definitions, Timelines and Events
 
+* The abbreviation or word "vert/verte" appear at the bottom of doc-06.adoc and doc-2.adoc.
 * It seems obvious now that the two NC 5702 documents or decrees are part of document 6. Rearrange the Antora
 navigation and doc-6.adoc page to reflect this.
 ** Add to the NC 5 702 documents/decrees that horizontal and small left-margin text.
