--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -144,11 +144,7 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
     B. 14. Oct. 1841
 
     Spring
-
-
-
-
-                               vert.
+    acting on behalf of [the above signed] 
 ....
 
 |
