--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -1,4 +1,4 @@
-= Document 6: (Under Development)
+= Document 6: Memorandum by Privy Councillor Ricke, Sovereign Order,
 :page-role: wide
 
 == Overview
