--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -187,7 +187,7 @@ ____
 
 === Prince of Schaumburg-Lippe Georg Wilhelm's Decision and Signature.
 
-In the left margin (shown below rotated so one can read it) is the decision that the Sovereign ruler of
+In the left margin--rotated below so one can read it--is the decision that the Sovereign ruler of
 Schaumburg-Lippe rendered in the Johann Heinrich 
 
 image::17-l-vertical-text.png[scale=50,link=self]
