--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -126,7 +126,7 @@ ____
 
 [cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
-|image::16-r-2nd-ricke-document[scale=50,link=self]
+|image::16-r-2nd-ricke-document.png[scale=50,link=self]
 |image::17-l.png[scale=50,link=self]
 |===
 
